--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "babel ./src --out-dir ./dist --source-maps --presets es2015,react --plugins babel-plugin-add-module-exports"
+    "prepublish": "babel ./src --out-dir ./dist --source-maps --presets env,react --plugins babel-plugin-add-module-exports"
   },
   "devDependencies": {
-    "babel": "^6.23.0",
-    "babel-plugin-add-module-exports": "^0.2.1"
+    "babel-cli": "^6.24.1",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-react": "^6.24.1"
   }
 }
