--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "network-canvas-style",
   "version": "1.0.0",
   "description": "Styles and React components for the Network Canvas project",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "babel ./src --out-dir ./dist --source-maps --presets env,react --plugins babel-plugin-add-module-exports"
