--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "network-canvas-style",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Styles and React components for the Network Canvas project",
-  "main": "dist/index.js",
+  "main": "dist/components/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublish": "babel ./src --out-dir ./dist --source-maps --presets env,react --plugins babel-plugin-add-module-exports"
