--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "network-canvas-style",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Styles and React components for the Network Canvas project",
   "main": "lib/components/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-js": "env NODE_ENV=production babel ./src --out-dir ./lib --source-maps --presets env,react --plugins babel-plugin-add-module-exports",
-    "prepublish": "npm run build-js"
+    "prepublish": "babel ./src --out-dir ./lib --source-maps --presets env,react --plugins babel-plugin-add-module-exports"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
