--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "network-canvas-style",
   "version": "1.0.9",
   "description": "Styles and React components for the Network Canvas project",
-  "main": "lib/components/index.js",
+  "main": "index.js",
   "scripts": {
     "lint-js": "eslint src",
     "lint-sass": "sass-lint styles",
@@ -84,17 +84,8 @@
     }
   },
   "dependencies": {
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-runtime": "^6.11.6",
-    "better-npm-run": "0.0.13",
     "classnames": "^2.2.5",
     "compression": "^1.6.2",
-    "css-loader": "^0.26.0",
     "cssnano": "^3.7.4",
     "debug": "^2.2.0",
     "extract-text-webpack-plugin": "^1.0.0",
@@ -104,9 +95,7 @@
     "imports-loader": "^0.7.0",
     "ip": "^1.1.2",
     "json-loader": "^0.5.4",
-    "node-sass": "^4.0.0",
     "normalize.css": "^5.0.0",
-    "postcss-loader": "^1.1.0",
     "prop-types": "^15.5.6",
     "react": "^15.0.0",
     "react-dom": "^15.0.0",
@@ -124,6 +113,8 @@
     "yargs": "^6.3.0"
   },
   "devDependencies": {
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
     "babel-cli": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-plugin-add-module-exports": "^0.2.1",
@@ -133,6 +124,12 @@
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-react-app": "^1.0.4",
+    "eslint-config-standard": "^6.0.0",
+    "eslint-config-standard-react": "^4.0.0",
+    "eslint-plugin-babel": "^4.0.0",
+    "eslint-plugin-promise": "^3.0.0",
+    "eslint-plugin-react": "^6.0.0",
+    "eslint-plugin-standard": "^2.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-flowtype": "^2.34.0",
     "eslint-plugin-import": "^2.3.0",
@@ -145,20 +142,14 @@
     "lodash": "^4.17.4",
     "prop-types": "^15.5.10",
     "react": "^15.5.4",
-    "babel-plugin-istanbul": "^3.0.0",
+    "better-npm-run": "0.0.13",
     "chai": "^3.4.1",
     "chai-as-promised": "^6.0.0",
     "chai-enzyme": "^0.6.1",
     "cheerio": "^0.22.0",
     "codecov": "^1.0.1",
+    "css-loader": "^0.26.0",
     "enzyme": "^2.0.0",
-    "eslint": "^3.0.1",
-    "eslint-config-standard": "^6.0.0",
-    "eslint-config-standard-react": "^4.0.0",
-    "eslint-plugin-babel": "^4.0.0",
-    "eslint-plugin-promise": "^3.0.0",
-    "eslint-plugin-react": "^6.0.0",
-    "eslint-plugin-standard": "^2.0.0",
     "express": "^4.14.0",
     "karma": "^1.0.0",
     "karma-coverage": "^1.0.0",
@@ -168,7 +159,9 @@
     "karma-webpack-with-fast-source-maps": "^1.9.2",
     "mocha": "^3.0.1",
     "nodemon": "^1.10.2",
+    "node-sass": "^4.0.0",
     "phantomjs-prebuilt": "^2.1.12",
+    "postcss-loader": "^1.1.0",
     "react-addons-test-utils": "^15.0.0",
     "react-svg-loader": "^1.1.1",
     "redbox-react": "^1.2.10",
