--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "lib/components/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "babel ./src --out-dir ./lib --source-maps --presets env,react --plugins babel-plugin-add-module-exports"
+    "prepublish": "babel ./src --out-dir ./lib --source-maps --presets env,react,stage-0 --plugins babel-plugin-add-module-exports"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-env": "^1.5.1",
-    "babel-preset-react": "^6.24.1"
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.22.0"
   }
 }
