--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.22.0"
+    "babel-preset-stage-0": "^6.22.0",
+    "lodash": "^4.17.4",
+    "react": "^15.5.4"
   }
 }
