--- a/package.json
+++ b/package.json
@@ -5,15 +5,28 @@
   "main": "lib/components/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint-js": "eslint src",
+    "lint-sass": "sass-lint styles",
+    "lint": "npm run lint-sass; npm run lint-js;",
     "prepublish": "babel ./src --out-dir ./lib --source-maps --presets env,react,stage-0 --plugins babel-plugin-add-module-exports"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.22.0",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-react-app": "^1.0.4",
+    "eslint-loader": "^1.7.1",
+    "eslint-plugin-flowtype": "^2.34.0",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-react": "^7.0.1",
     "lodash": "^4.17.4",
-    "react": "^15.5.4"
+    "react": "^15.5.4",
+    "sass-lint": "^1.10.2"
   }
 }
