--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
     "eslint-plugin-react": "^7.0.1",
-    "lodash": "^4.17.4",
-    "react": "^15.5.4",
     "sass-lint": "^1.10.2"
+  },
+  "dependencies": {
+    "classnames": "^2.2.5",
+    "lodash": "^4.17.4",
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4"
   }
 }
