--- a/package.json
+++ b/package.json
@@ -1,45 +1,27 @@
 {
-<<<<<<< HEAD
-  "name": "network-canvas-style",
-  "version": "1.0.9",
-||||||| merged common ancestors
-  "name": "network-canvas-style",
-  "version": "1.0.8",
-=======
   "name": "network-canvas-ui",
   "version": "1.0.9",
->>>>>>> [WIP] Saving in progress.
   "description": "Styles and React components for the Network Canvas project",
   "main": "lib/components/index.js",
   "scripts": {
     "lint-js": "eslint src",
     "lint-sass": "sass-lint styles",
-    "lint": "npm run lint-sass; npm run lint-js;",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "prepublish": "babel ./src --out-dir ./lib --source-maps --presets env,react --plugins babel-plugin-add-module-exports"
+    "lint": "eslint bin build config server src tests",
+    "test": "better-npm-run test",
     "build": "better-npm-run compile",
     "clean": "rimraf dist",
     "compile": "better-npm-run compile",
-    "lint": "eslint bin build config server src tests",
     "lint:fix": "npm run lint -- --fix",
     "start": "better-npm-run start:prod",
     "serve": "better-npm-run start",
     "postinstall": "babel ./src --out-dir ./lib --source-maps --copy-files --presets env,react,stage-0 --plugins=add-module-exports,transform-class-properties",
     "dev": "better-npm-run dev",
-    "test": "better-npm-run test",
     "test:dev": "npm run test -- --watch",
     "deploy": "better-npm-run deploy",
     "deploy:dev": "better-npm-run deploy:dev",
     "deploy:prod": "better-npm-run deploy:prod",
-<<<<<<< HEAD
-    "codecov": "cat coverage/*/lcov.info | codecov"
-||||||| merged common ancestors
-    "codecov": "cat coverage/*/lcov.info | codecov",
-    "prepublish": "babel ./src --out-dir ./lib --source-maps --presets env,react,stage-0 --plugins=add-module-exports,transform-class-properties"
-=======
     "codecov": "cat coverage/*/lcov.info | codecov",
     "prepublish": "babel ./src --out-dir ./lib --source-maps --copy-files --presets env,react,stage-0 --plugins=add-module-exports,transform-class-properties"
->>>>>>> [WIP] Saving in progress.
   },
   "betterScripts": {
     "compile": {
@@ -100,9 +82,19 @@
     }
   },
   "dependencies": {
+    "better-npm-run": "0.0.13",
+    "chai": "^3.4.1",
+    "chai-as-promised": "^6.0.0",
+    "chai-enzyme": "^0.6.1",
+    "cheerio": "^0.22.0",
     "classnames": "^2.2.5",
+    "codecov": "^1.0.1",
     "compression": "^1.6.2",
+    "css-loader": "^0.26.0",
+    "cssnano": "^3.7.4",
     "debug": "^2.2.0",
+    "enzyme": "^2.0.0",
+    "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.0",
     "file-loader": "^0.9.0",
     "fs-extra": "^1.0.0",
@@ -110,22 +102,39 @@
     "imports-loader": "^0.7.0",
     "ip": "^1.1.2",
     "json-loader": "^0.5.4",
+    "karma": "^1.7.0",
+    "karma-coverage": "^1.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-mocha-reporter": "^2.0.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-webpack-with-fast-source-maps": "^1.9.2",
     "lodash": "^4.17.4",
-    "normalize.css": "^5.0.0",
+    "mocha": "^3.0.1",
+    "node-sass": "^4.0.0",
+    "nodemon": "^1.10.2",
+    "phantomjs-prebuilt": "^2.1.12",
+    "postcss-loader": "^1.1.0",
     "prop-types": "^15.5.6",
     "react": "^15.0.0",
+    "react-addons-test-utils": "^15.0.0",
     "react-dom": "^15.0.0",
     "react-redux": "^5.0.1",
     "react-retina-image": "^2.0.4",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
+    "react-svg-loader": "^1.1.1",
+    "redbox-react": "^1.2.10",
     "redux": "^3.6.0",
     "redux-thunk": "^2.0.0",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
+    "sinon": "^1.17.5",
+    "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.14",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.2",
     "yargs": "^6.3.0"
   },
   "devDependencies": {
@@ -144,43 +153,12 @@
     "eslint-config-standard-react": "^4.0.0",
     "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-promise": "^3.0.0",
-    "eslint-plugin-react": "^6.0.0",
+    "eslint-plugin-react": "^7.0.1",
     "eslint-plugin-standard": "^2.0.0",
     "eslint-loader": "^1.7.1",
     "eslint-plugin-flowtype": "^2.34.0",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-react": "^7.0.1",
     "sass-lint": "^1.10.2"
-  },
-  "dependencies": {
-    "better-npm-run": "0.0.13",
-    "chai": "^3.4.1",
-    "chai-as-promised": "^6.0.0",
-    "chai-enzyme": "^0.6.1",
-    "cheerio": "^0.22.0",
-    "codecov": "^1.0.1",
-    "css-loader": "^0.26.0",
-    "cssnano": "^3.7.4",
-    "enzyme": "^2.0.0",
-    "express": "^4.14.0",
-    "karma": "^1.0.0",
-    "karma-coverage": "^1.0.0",
-    "karma-mocha": "^1.0.1",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-webpack-with-fast-source-maps": "^1.9.2",
-    "mocha": "^3.0.1",
-    "nodemon": "^1.10.2",
-    "node-sass": "^4.0.0",
-    "phantomjs-prebuilt": "^2.1.12",
-    "postcss-loader": "^1.1.0",
-    "react-addons-test-utils": "^15.0.0",
-    "react-svg-loader": "^1.1.1",
-    "redbox-react": "^1.2.10",
-    "sinon": "^1.17.5",
-    "sinon-chai": "^2.8.0",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2"
   }
 }
