--- a/package.json
+++ b/package.json
@@ -138,11 +138,12 @@
     "yargs": "^6.3.0"
   },
   "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-loader": "^6.2.5",
     "babel-cli": "^6.24.1",
+    "babel-core": "^6.17.0",
     "babel-eslint": "^7.2.3",
+    "babel-loader": "^6.2.5",
     "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.22.0",
@@ -151,14 +152,14 @@
     "eslint-config-react-app": "^1.0.4",
     "eslint-config-standard": "^6.0.0",
     "eslint-config-standard-react": "^4.0.0",
-    "eslint-plugin-babel": "^4.0.0",
-    "eslint-plugin-promise": "^3.0.0",
-    "eslint-plugin-react": "^7.0.1",
-    "eslint-plugin-standard": "^2.0.0",
     "eslint-loader": "^1.7.1",
+    "eslint-plugin-babel": "^4.0.0",
     "eslint-plugin-flowtype": "^2.34.0",
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "^5.0.3",
+    "eslint-plugin-promise": "^3.0.0",
+    "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-standard": "^2.0.0",
     "sass-lint": "^1.10.2"
   }
 }
