--- a/package.json
+++ b/package.json
@@ -127,6 +127,7 @@
     "redbox-react": "^1.2.10",
     "redux": "^3.6.0",
     "redux-thunk": "^2.0.0",
+    "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
     "sinon": "^1.17.5",
