--- a/package.json
+++ b/package.json
@@ -152,6 +152,7 @@
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.22.0",
+    "change-case": "^3.0.1",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-react-app": "^1.0.4",
