--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,8 @@
       "react/no-string-refs": "off",
       "react/prefer-stateless-function": "warn",
       "import/no-extraneous-dependencies": "off",
+      "jsx-a11y/no-static-element-interactions": "warn",
+      "jsx-a11y/aria-role": "warn",
       "no-prototype-builtins": "off"
     }
 }
