move dependencies not needed for consumption

--- a/package.json
+++ b/package.json
@@ -86,62 +86,10 @@
     }
   },
   "dependencies": {
-    "better-npm-run": "0.0.13",
-    "chai": "^3.4.1",
-    "chai-as-promised": "^6.0.0",
-    "chai-enzyme": "^0.6.1",
-    "cheerio": "^0.22.0",
     "classnames": "^2.2.5",
-    "codecov": "^1.0.1",
-    "compression": "^1.6.2",
-    "css-loader": "^0.26.0",
-    "cssnano": "^3.7.4",
-    "debug": "^2.2.0",
-    "enzyme": "^2.0.0",
-    "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.0",
-    "file-loader": "^0.9.0",
-    "fs-extra": "^1.0.0",
-    "gridle": "^2.0.48",
-    "html-webpack-plugin": "^2.22.0",
-    "imports-loader": "^0.7.0",
-    "ip": "^1.1.2",
-    "json-loader": "^0.5.4",
-    "karma": "^1.7.0",
-    "karma-coverage": "^1.0.0",
-    "karma-mocha": "^1.0.1",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-webpack-with-fast-source-maps": "^1.9.2",
     "lodash": "^4.17.4",
-    "mocha": "^3.0.1",
-    "node-sass": "^4.0.0",
-    "nodemon": "^1.10.2",
-    "phantomjs-prebuilt": "^2.1.12",
-    "postcss-loader": "^1.1.0",
     "prop-types": "^15.5.6",
-    "react": "^15.0.0",
-    "react-addons-test-utils": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "react-redux": "^5.0.1",
-    "react-retina-image": "^2.0.4",
-    "react-router": "^3.0.0",
-    "react-router-redux": "^4.0.8",
-    "react-svg-loader": "^1.1.1",
-    "redbox-react": "^1.2.10",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.0.0",
-    "resolve-url-loader": "^2.0.2",
-    "rimraf": "^2.5.4",
-    "sass-loader": "^4.0.0",
-    "sinon": "^1.17.5",
-    "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2",
-    "yargs": "^6.3.0"
+    "react": "^15.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -167,6 +115,53 @@
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^2.0.0",
-    "sass-lint": "^1.10.2"
+    "sass-lint": "^1.10.2",
+    "webpack": "^1.12.14",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.2",
+    "better-npm-run": "0.0.13",
+    "chai": "^3.4.1",
+    "chai-as-promised": "^6.0.0",
+    "chai-enzyme": "^0.6.1",
+    "cheerio": "^0.22.0",
+    "codecov": "^1.0.1",
+    "compression": "^1.6.2",
+    "css-loader": "^0.26.0",
+    "cssnano": "^3.7.4",
+    "debug": "^2.2.0",
+    "enzyme": "^2.0.0",
+    "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.0",
+    "file-loader": "^0.9.0",
+    "fs-extra": "^1.0.0",
+    "gridle": "^2.0.48",
+    "html-webpack-plugin": "^2.22.0",
+    "imports-loader": "^0.7.0",
+    "ip": "^1.1.2",
+    "json-loader": "^0.5.4",
+    "karma": "^1.7.0",
+    "karma-coverage": "^1.0.0",
+    "karma-mocha": "^1.0.1",
+    "karma-mocha-reporter": "^2.0.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-webpack-with-fast-source-maps": "^1.9.2",
+    "mocha": "^3.0.1",
+    "node-sass": "^4.0.0",
+    "nodemon": "^1.10.2",
+    "phantomjs-prebuilt": "^2.1.12",
+    "postcss-loader": "^1.1.0",
+    "react-addons-test-utils": "^15.0.0",
+    "react-dom": "^15.0.0",
+    "react-retina-image": "^2.0.4",
+    "react-svg-loader": "^1.1.1",
+    "redbox-react": "^1.2.10",
+    "resolve-url-loader": "^2.0.2",
+    "rimraf": "^2.5.4",
+    "sass-loader": "^4.0.0",
+    "sinon": "^1.17.5",
+    "sinon-chai": "^2.8.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.6",
+    "yargs": "^6.3.0"
   }
 }
