update node version:

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "network-canvas-ui",
-  "version": "1.8.8",
+  "version": "1.9.0",
   "description": "Styles and React components for the Network Canvas project",
   "main": "lib/components/index.js",
   "scripts": {
@@ -101,7 +101,18 @@
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.22.0",
+    "better-npm-run": "0.0.13",
+    "chai": "^3.4.1",
+    "chai-as-promised": "^6.0.0",
+    "chai-enzyme": "^0.6.1",
     "change-case": "^3.0.1",
+    "cheerio": "^0.22.0",
+    "codecov": "^1.0.1",
+    "compression": "^1.6.2",
+    "css-loader": "^0.26.0",
+    "cssnano": "^3.7.4",
+    "debug": "^2.2.0",
+    "enzyme": "^2.0.0",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-react-app": "^1.0.4",
@@ -115,21 +126,6 @@
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^2.0.0",
-    "sass-lint": "^1.10.2",
-    "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2",
-    "better-npm-run": "0.0.13",
-    "chai": "^3.4.1",
-    "chai-as-promised": "^6.0.0",
-    "chai-enzyme": "^0.6.1",
-    "cheerio": "^0.22.0",
-    "codecov": "^1.0.1",
-    "compression": "^1.6.2",
-    "css-loader": "^0.26.0",
-    "cssnano": "^3.7.4",
-    "debug": "^2.2.0",
-    "enzyme": "^2.0.0",
     "express": "^4.14.0",
     "extract-text-webpack-plugin": "^1.0.0",
     "file-loader": "^0.9.0",
@@ -152,16 +148,24 @@
     "postcss-loader": "^1.1.0",
     "react-addons-test-utils": "^15.0.0",
     "react-dom": "^15.0.0",
+    "react-redux": "^5.0.6",
     "react-retina-image": "^2.0.4",
+    "react-router": "^4.2.0",
     "react-svg-loader": "^1.1.1",
     "redbox-react": "^1.2.10",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.5.4",
+    "sass-lint": "^1.10.2",
     "sass-loader": "^4.0.0",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.6",
+    "webpack": "^1.12.14",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.2",
     "yargs": "^6.3.0"
   }
 }
