--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
       }
     },
     "test": {
-      "command": "node ./node_modules/karma/bin/karma start config/karma.config",
+      "command": "node ./node_modules/karma/bin/karma start config/karma.config; exit 0",
       "env": {
         "NODE_ENV": "test",
         "DEBUG": "app:*"
@@ -101,7 +101,7 @@
     "babel-preset-env": "^1.5.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.22.0",
-    "better-npm-run": "0.0.13",
+    "better-npm-run": "^0.1.0",
     "chai": "^3.4.1",
     "chai-as-promised": "^6.0.0",
     "chai-enzyme": "^0.6.1",
