--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ node_js:
 jobs:
   include:
     - stage: build
-      script: node run build
+      script: npm run build
     - stage: prepublish
-      script: node run prepublish
+      script: npm run prepublish
