--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ node_js:
   - "8.5"
 jobs:
   include:
+    - stage: lint
+      script: npm run lint
     - stage: build
       script: npm run build
     - stage: prepublish
