--- a/package.json
+++ b/package.json
@@ -88,8 +88,7 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "lodash": "^4.17.4",
-    "prop-types": "^15.5.6",
-    "react": "^15.0.0"
+    "prop-types": "^15.5.6"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -102,9 +101,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.22.0",
     "better-npm-run": "^0.1.0",
-    "chai": "^3.4.1",
-    "chai-as-promised": "^6.0.0",
-    "chai-enzyme": "^0.6.1",
+    "chai-enzyme": "^0.8.0",
     "change-case": "^3.0.1",
     "cheerio": "^0.22.0",
     "codecov": "^1.0.1",
@@ -112,7 +109,9 @@
     "css-loader": "^0.26.0",
     "cssnano": "^3.7.4",
     "debug": "^2.2.0",
-    "enzyme": "^2.0.0",
+    "react": "^16.2.0",
+    "react-redux": "^5.0.6",
+    "react-router": "3.0.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-react-app": "^1.0.4",
@@ -147,14 +146,10 @@
     "phantomjs-prebuilt": "^2.1.12",
     "postcss-loader": "^1.1.0",
     "react-addons-test-utils": "^15.0.0",
-    "react-dom": "^15.0.0",
-    "react-redux": "^5.0.6",
     "react-retina-image": "^2.0.4",
-    "react-router": "^4.2.0",
     "react-svg-loader": "^1.1.1",
     "redbox-react": "^1.2.10",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.5.4",
     "sass-lint": "^1.10.2",
