update dependencies to fix dev server

--- a/package.json
+++ b/package.json
@@ -109,9 +109,6 @@
     "css-loader": "^0.26.0",
     "cssnano": "^3.7.4",
     "debug": "^2.2.0",
-    "react": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "react-router": "3.0.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-react-app": "^1.0.4",
@@ -145,11 +142,15 @@
     "nodemon": "^1.10.2",
     "phantomjs-prebuilt": "^2.1.12",
     "postcss-loader": "^1.1.0",
+    "react": "^15.6.0",
     "react-addons-test-utils": "^15.0.0",
+    "react-redux": "^5.0.6",
     "react-retina-image": "^2.0.4",
+    "react-router": "3.0.2",
     "react-svg-loader": "^1.1.1",
     "redbox-react": "^1.2.10",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.5.4",
     "sass-lint": "^1.10.2",
