--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.12.2",
   "description": "Styles and React components for the Network Canvas project",
   "main": "lib/components/index.js",
+  "engines": {
+      "node": "8.9.3",
+      "npm": "5.5.1"
+  },
   "scripts": {
     "lint-js": "eslint src",
-    "lint-sass": "sass-lint styles",
+    "lint-sass": "sass-lint -v",
     "lint": "eslint bin build config server src tests",
     "test": "better-npm-run test",
     "build": "better-npm-run compile",
@@ -153,7 +157,7 @@
     "redux-thunk": "^2.2.0",
     "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.5.4",
-    "sass-lint": "^1.10.2",
+    "sass-lint": "^1.12.1",
     "sass-loader": "^4.0.0",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
