--- a/package.json
+++ b/package.json
@@ -2,169 +2,13 @@
   "name": "network-canvas-ui",
   "version": "2.0.0",
   "description": "Styles and React components for the Network Canvas project",
-  "main": "src/components/index.js",
+  "main": "components/index.js",
   "engines": {
     "node": "8.11.1",
     "npm": "5.8.0"
   },
-  "scripts": {
-    "lint-js": "eslint src",
-    "lint-sass": "sass-lint -v",
-    "lint": "eslint bin build config server src tests",
-    "test": "better-npm-run test",
-    "build": "better-npm-run compile",
-    "clean": "rimraf dist",
-    "compile": "better-npm-run compile",
-    "lint:fix": "npm run lint -- --fix",
-    "start": "better-npm-run start:prod",
-    "serve": "better-npm-run start",
-    "dev": "better-npm-run dev",
-    "test:dev": "npm run test -- --watch",
-    "deploy": "better-npm-run deploy",
-    "deploy:dev": "better-npm-run deploy:dev",
-    "deploy:prod": "better-npm-run deploy:prod",
-    "codecov": "cat coverage/*/lcov.info | codecov",
-    "dist:clean": "rimraf lib",
-    "dist:build": "babel ./src --out-dir ./lib --source-maps --copy-files --presets env,react,stage-0 --plugins=add-module-exports,transform-class-properties",
-    "dist:icon-index": "node ./bin/build-icon-dictionary.js > src/assets/img/icons/index.js",
-    "dist": "npm run dist:clean && npm run dist:build",
-    "prepublish": "npm run dist"
-  },
-  "betterScripts": {
-    "compile": {
-      "command": "node bin/compile",
-      "env": {
-        "DEBUG": "app:*"
-      }
-    },
-    "dev": {
-      "command": "nodemon bin/dev-server --ignore dist --ignore coverage --ignore tests --ignore src",
-      "env": {
-        "NODE_ENV": "development",
-        "DEBUG": "app:*"
-      }
-    },
-    "deploy": {
-      "command": "npm run lint && npm run clean && npm run compile",
-      "env": {
-        "DEBUG": "app:*"
-      }
-    },
-    "deploy:dev": {
-      "command": "npm run deploy",
-      "env": {
-        "NODE_ENV": "development",
-        "DEBUG": "app:*"
-      }
-    },
-    "deploy:prod": {
-      "command": "npm run deploy",
-      "env": {
-        "NODE_ENV": "production",
-        "DEBUG": "app:*"
-      }
-    },
-    "prepublish": {
-      "command": "babel ./src --out-dir ./lib --source-maps --presets env,react --plugins babel-plugin-add-module-exports"
-    },
-    "start": {
-      "command": "node bin/dev-server",
-      "env": {
-        "DEBUG": "app:*"
-      }
-    },
-    "start:prod": {
-      "command": "node bin/dev-server",
-      "env": {
-        "DEBUG": "app:*",
-        "NODE_ENV": "production"
-      }
-    },
-    "test": {
-      "command": "node ./node_modules/karma/bin/karma start config/karma.config; exit 0",
-      "env": {
-        "NODE_ENV": "test",
-        "DEBUG": "app:*"
-      }
-    }
-  },
   "dependencies": {
-    "classnames": "^2.2.5",
-    "lodash": "^4.17.4",
-    "prop-types": "^15.5.6"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.17.0",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.5.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.22.0",
-    "better-npm-run": "^0.1.0",
-    "chai-enzyme": "^0.8.0",
-    "change-case": "^3.0.1",
-    "cheerio": "^0.22.0",
-    "codecov": "^1.0.1",
-    "compression": "^1.6.2",
-    "css-loader": "^0.26.0",
-    "cssnano": "^3.7.4",
-    "debug": "^2.2.0",
-    "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
-    "eslint-config-react-app": "^1.0.4",
-    "eslint-config-standard": "^6.0.0",
-    "eslint-config-standard-react": "^4.0.0",
-    "eslint-loader": "^1.7.1",
-    "eslint-plugin-babel": "^4.0.0",
-    "eslint-plugin-flowtype": "^2.34.0",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "^5.0.3",
-    "eslint-plugin-promise": "^3.0.0",
-    "eslint-plugin-react": "^7.1.0",
-    "eslint-plugin-standard": "^2.0.0",
-    "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.0",
-    "file-loader": "^0.9.0",
-    "fs-extra": "^1.0.0",
-    "gridle": "^2.0.48",
-    "html-webpack-plugin": "^2.22.0",
-    "imports-loader": "^0.7.0",
-    "ip": "^1.1.2",
-    "json-loader": "^0.5.4",
-    "karma": "^1.7.0",
-    "karma-coverage": "^1.0.0",
-    "karma-mocha": "^1.0.1",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-phantomjs-launcher": "^1.0.2",
-    "karma-webpack-with-fast-source-maps": "^1.9.2",
-    "mocha": "^3.0.1",
-    "node-sass": "^4.0.0",
-    "nodemon": "^1.10.2",
-    "phantomjs-prebuilt": "^2.1.12",
-    "postcss-loader": "^1.1.0",
-    "react": "^15.6.0",
-    "react-addons-test-utils": "^15.0.0",
-    "react-redux": "^5.0.6",
-    "react-retina-image": "^2.0.4",
-    "react-router": "3.0.2",
-    "react-svg-loader": "^1.1.1",
-    "redbox-react": "^1.2.10",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-    "resolve-url-loader": "^2.0.2",
-    "rimraf": "^2.5.4",
-    "sass-lint": "^1.12.1",
-    "sass-loader": "^4.0.0",
-    "sinon": "^1.17.5",
-    "sinon-chai": "^2.8.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.6",
-    "webpack": "^1.12.14",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2",
-    "yargs": "^6.3.0"
   }
 }
