--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
     },
     "parser": "babel-eslint",
     "parserOptions": {
-        ecmaVersion: 7,
+        "ecmaVersion": 7,
         "ecmaFeatures": {
             "jsx": true,
             "spread": true,
