--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "babel-eslint": "^8.2.3",
     "classnames": "^2.2.5",
     "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-plugin-import": "2.7.0",
+    "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "^7.7.0",
     "react": "^16.3.2",
     "sass-lint": "^1.12.1"
