add build stage with concurrent task

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,6 @@ install:
   - npm install
 jobs:
   include:
-    - script: npm run lint
-    - script: npm run sass-lint
+    - stage: lint
+      script: npm run lint
+      script: npm run sass-lint
