--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -9,7 +9,14 @@ rules:
   placeholder-in-extend: 1
 
   # Mixins
-  mixins-before-declarations: 1
+  mixins-before-declarations:
+    - 1
+    -
+      exclude:
+        - block
+        - element
+        - modifier
+        - breakpoint
 
   # Line Spacing
   one-declaration-per-line: 1
