--- a/package.json
+++ b/package.json
@@ -16,14 +16,18 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "animejs": "^2.2.0",
     "babel-eslint": "^8.2.6",
     "classnames": "^2.2.6",
+    "enzyme": "^3.7.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "^7.11.1",
     "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-transition-group": "^2.5.0",
     "redux-form": "^7.4.2",
     "sass-lint": "^1.12.1",
     "uuid": "^3.2.1"
