--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -77,7 +77,9 @@ rules:
   hex-length: 1
   hex-notation: 1
   indentation: 1
-  leading-zero: 1
+  leading-zero:
+    - 1
+    - include: true
   max-line-length: 0
   max-file-line-count: 0
   nesting-depth: 0
