--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Styles and React components for the Network Canvas project",
   "main": "components/index.js",
   "engines": {
-    "node": "10.11.0",
-    "npm": "6.4.1"
+    "node": "12.8.0",
+    "npm": "6.10.2"
   },
   "repository": {
     "type": "git"
@@ -25,9 +25,9 @@
     "eslint-plugin-import": "2.7.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "^7.11.1",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-transition-group": "^2.5.0",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-transition-group": "^4.3.0",
     "recompose": "^0.30.0",
     "redux-form": "^7.4.2",
     "sass-lint": "^1.12.1",
