--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "^7.11.1",
     "react": "16.11.0",
+    "react-compound-slider": "^2.4.0",
     "react-dom": "16.11.0",
     "react-transition-group": "^4.3.0",
     "recompose": "^0.30.0",
