--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codaco/ui",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "Styles and React components for the Network Canvas project",
   "main": "lib/components/index.js",
   "type": "module",
@@ -22,12 +22,15 @@
     "animejs": "^2.2.0",
     "classnames": "^2.2.6",
     "luxon": "^1.21.3",
-    "prop-types": "^15.7.2",
-    "react": "16.11.0",
+    "prop-types": "^15.6.2",
     "react-compound-slider": "^2.4.0",
     "react-transition-group": "^4.3.0",
     "recompose": "^0.30.0",
     "uuid": "^3.2.1"
+  },
+  "peerDependencies": {
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.7",
@@ -43,7 +46,8 @@
     "eslint-plugin-react": "^7.11.1",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
-    "react-dom": "16.11.0",
-    "sass-lint": "^1.12.1"
+    "sass-lint": "^1.12.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   }
 }
