Use babel.config.js to avoid overruling parent package

--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
     "eslint-plugin-react": "^7.11.1",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
-    "sass-lint": "^1.12.1",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "sass-lint": "^1.12.1"
   }
 }
