Working scroll to

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-compound-slider": "^2.4.0",
     "react-transition-group": "^4.3.0",
     "recompose": "^0.30.0",
+    "scrollparent": "^2.0.1",
     "uuid": "^3.2.1"
   },
   "peerDependencies": {
