--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "^7.11.1",
     "faker": "^4.1.0",
+    "lodash": "^4.17.20",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "node-sass": "^4.14.1",
