--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-resize-aware": "^3.0.1",
     "sass-lint": "^1.12.1",
     "sass-loader": "^8.0.2"
   }
