--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codaco/ui",
-  "version": "3.7.2",
+  "version": "3.8.0",
   "description": "Styles and React components for the Network Canvas project",
   "main": "lib/components/index.js",
   "license": "GPL-3.0-or-later",
@@ -39,16 +39,17 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.7",
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-proposal-class-properties": "^7.7.4",
-    "@babel/preset-react": "^7.7.4",
-    "@storybook/addon-actions": "^5.3.18",
-    "@storybook/addon-links": "^5.3.18",
-    "@storybook/addons": "^5.3.18",
-    "@storybook/react": "^5.3.18",
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@storybook/addon-actions": "^6.0.27",
+    "@storybook/addon-links": "^6.0.27",
+    "@storybook/addons": "^6.0.27",
+    "@storybook/react": "^6.0.27",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^8.1.0",
+    "core-js": "^3.6.5",
     "enzyme": "^3.7.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^15.0.1",
@@ -62,6 +63,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sass-lint": "^1.12.1",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "storybook-addon-themes": "^6.0.0"
   }
 }
