--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
         "es6": true,
         "node": true
     },
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
     "parserOptions": {
         "ecmaVersion": 7,
         "ecmaFeatures": {
