--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@material-ui/icons": "^4.11.2",
+    "@productboard/slate-edit-list": "^0.21.5",
     "animejs": "^2.2.0",
     "classnames": "^2.2.6",
     "framer-motion": "^2.9.1",
@@ -31,7 +33,11 @@
     "react-resize-aware": "^3.0.1",
     "react-transition-group": "^4.3.0",
     "recompose": "^0.30.0",
+    "remark-slate": "^1.5.1",
     "scrollparent": "^2.0.1",
+    "slate": "^0.57.3",
+    "slate-history": "^0.59.0",
+    "slate-react": "^0.57.3",
     "uuid": "^3.2.1"
   },
   "peerDependencies": {
