initial markdown editor setup

--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "react-resize-aware": "^3.0.1",
     "react-transition-group": "^4.3.0",
     "recompose": "^0.30.0",
+    "remark-parse": "^9.0.0",
     "remark-slate": "^1.5.1",
     "scrollparent": "^2.0.1",
     "slate": "^0.57.3",
     "slate-history": "^0.59.0",
     "slate-react": "^0.57.3",
+    "unified": "^9.2.1",
     "uuid": "^3.2.1"
   },
   "peerDependencies": {
