--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/preset-react": "^7.12.1",
     "@storybook/addon-actions": "^6.2.8",
+    "@storybook/addon-essentials": "^6.2.8",
     "@storybook/addon-links": "^6.2.8",
     "@storybook/addons": "^6.2.8",
     "@storybook/react": "^6.2.8",
