--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@codaco/ui",
-  "version": "5.3.5",
+  "version": "6.0.0-alpha.1",
   "description": "Styles and React components for the Network Canvas project",
   "main": "lib/components/index.js",
   "license": "GPL-3.0-or-later",
   "engines": {
-    "node": "12.14.1",
-    "npm": "7.6.3"
+    "node": "16.1.0",
+    "npm": "7.11.2"
   },
   "repository": {
     "type": "git"
@@ -45,8 +45,8 @@
     "uuid": "^3.2.1"
   },
   "peerDependencies": {
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -58,6 +58,7 @@
     "@storybook/addon-actions": "^6.2.8",
     "@storybook/addon-essentials": "^6.2.8",
     "@storybook/addon-links": "^6.2.8",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addons": "^6.2.8",
     "@storybook/react": "^6.2.8",
     "babel-loader": "^8.1.0",
@@ -71,9 +72,9 @@
     "faker": "^4.1.0",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
-    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "sass": "^1.32.13",
     "sass-lint": "^1.13.1",
     "sass-loader": "^8.0.2",
     "storybook-addon-themes": "^6.1.0"
