--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@storybook/addons": "^6.2.8",
     "@storybook/react": "^6.2.8",
     "babel-loader": "^8.1.0",
+    "blobs": "^2.2.0",
     "core-js": "^3.6.5",
     "enzyme": "^3.7.0",
     "eslint": "^7.21.0",
@@ -70,6 +71,7 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "faker": "^4.1.0",
+    "flubber": "^0.4.2",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "react": "^16.13.1",
