--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "babel-loader": "^8.1.0",
     "blobs": "^2.2.0",
     "core-js": "^3.6.5",
+    "d3-interpolate-path": "^2.2.3",
     "enzyme": "^3.7.0",
     "eslint": "^7.21.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -71,7 +72,6 @@
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "faker": "^4.1.0",
-    "flubber": "^0.4.2",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "react": "^16.13.1",
