--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@codaco/ui",
-  "version": "5.4.0",
+  "version": "5.5.0-alpha.1",
   "description": "Styles and React components for the Network Canvas project",
   "main": "lib/components/index.js",
   "license": "GPL-3.0-or-later",
@@ -32,14 +32,16 @@
     "luxon": "^1.21.3",
     "prop-types": "^15.6.2",
     "react-compound-slider": "^2.4.0",
-    "react-markdown": "^5.0.3",
+    "react-markdown": "^6.0.2",
     "react-resize-aware": "^3.0.1",
     "react-transition-group": "^4.3.0",
     "recompose": "^0.30.0",
+    "rehype-raw": "^5.1.0",
+    "rehype-sanitize": "^4.0.0",
     "remark-parse": "^9.0.0",
-    "remark-slate": "^1.5.1",
+    "remark-slate": "^1.8.0",
     "scrollparent": "^2.0.1",
-    "slate": "^0.57.3",
+    "slate": "^0.60.17",
     "slate-history": "^0.59.0",
     "slate-react": "^0.57.3",
     "unified": "^9.2.1",
