--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "@storybook/theming": "^6.2.8",
     "animejs": "^2.2.0",
     "classnames": "^2.2.6",
-    "framer-motion": "^2.9.1",
-    "lodash": "^4.17.20",
+    "emoji-dictionary": "^1.0.11",
     "luxon": "^1.21.3",
     "prop-types": "^15.6.2",
     "react-compound-slider": "^2.4.0",
@@ -41,13 +40,15 @@
     "remark-parse": "^9.0.0",
     "remark-slate": "^1.8.0",
     "scrollparent": "^2.0.1",
-    "slate": "^0.60.17",
+    "slate": "^0.57.1",
     "slate-history": "^0.59.0",
     "slate-react": "^0.57.3",
     "unified": "^9.2.1",
     "uuid": "^3.2.1"
   },
   "peerDependencies": {
+    "framer-motion": "^4.1.17",
+    "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
@@ -75,8 +76,6 @@
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
     "sass-lint": "^1.13.1",
     "sass-loader": "^8.0.2"
   }
