--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "recompose": "^0.30.0",
     "rehype-raw": "^5.1.0",
     "rehype-sanitize": "^4.0.0",
+    "remark": "^13.0.0",
     "remark-parse": "^9.0.0",
     "remark-slate": "^1.8.0",
     "scrollparent": "^2.0.1",
     "slate": "^0.57.3",
     "slate-history": "^0.59.0",
     "slate-react": "^0.57.3",
+    "strip-markdown": "^4.0.0",
     "unified": "^9.2.1",
     "uuid": "^3.2.1"
   },
