--- a/package.json
+++ b/package.json
@@ -25,17 +25,20 @@
     "@material-ui/icons": "^4.11.2",
     "@productboard/slate-edit-list": "^0.21.5",
     "@storybook/theming": "^6.2.8",
-    "animejs": "^2.2.0",
+    "blobs": "^2.2.0",
     "classnames": "^2.2.6",
+    "d3-interpolate-path": "^2.2.3",
     "emoji-dictionary": "^1.0.11",
-    "framer-motion": "^2.9.1",
+    "framer-motion": "^4.1.18-rc.24",
     "lodash": "^4.17.20",
-    "luxon": "^1.21.3",
-    "prop-types": "^15.6.2",
-    "react-compound-slider": "^2.4.0",
+    "luxon": "^1.27.0",
+    "prop-types": "^15.7.2",
+    "react-compound-slider": "^3.3.1",
     "react-markdown": "^6.0.2",
-    "react-resize-aware": "^3.0.1",
-    "react-transition-group": "^4.3.0",
+    "react-resize-aware": "^3.1.0",
+    "react-table": "^7.7.0",
+    "react-virtualized-auto-sizer": "^1.0.5",
+    "react-window": "^1.8.6",
     "recompose": "^0.30.0",
     "rehype-raw": "^5.1.0",
     "rehype-sanitize": "^4.0.0",
@@ -48,7 +51,8 @@
     "slate-react": "^0.57.3",
     "strip-markdown": "^4.0.0",
     "unified": "^9.2.1",
-    "uuid": "^3.2.1"
+    "use-persisted-state": "^0.3.3",
+    "uuid": "^8.3.2"
   },
   "peerDependencies": {
     "react": "^17.0.2",
@@ -68,9 +72,6 @@
     "@storybook/addons": "^6.2.8",
     "@storybook/react": "^6.2.8",
     "babel-loader": "^8.1.0",
-    "blobs": "^2.2.0",
-    "core-js": "^3.6.5",
-    "d3-interpolate-path": "^2.2.3",
     "enzyme": "^3.7.0",
     "eslint": "^7.21.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -80,9 +81,9 @@
     "faker": "^4.1.0",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "sass": "^1.32.13",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "sass": "^1.35.1",
     "sass-lint": "^1.13.1",
     "sass-loader": "^8.0.2"
   }
