--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-dom": "^17.0.2",
     "sass": "^1.35.1",
     "sass-lint": "^1.13.1",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "use-resize-observer": "^7.0.1"
   }
 }
