--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sass-lint": "^1.13.1",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "use-resize-observer": "^7.0.1"
   }
 }
