--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "classnames": "^2.2.6",
     "emoji-dictionary": "^1.0.11",
     "framer-motion": "^2.9.1",
+    "lint": "^0.7.0",
     "lodash": "^4.17.20",
     "luxon": "^1.21.3",
     "prop-types": "^15.6.2",
