--- a/package.json
+++ b/package.json
@@ -77,10 +77,10 @@
     "faker": "^4.1.0",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
-    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "sass": "^1.56.1",
     "sass-lint": "^1.13.1",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^10.4.1"
   }
 }
