linting and fix Number story

--- a/.eslintrc
+++ b/.eslintrc
@@ -21,6 +21,7 @@
     "sourceType": "module"
   },
   "plugins": [
+    "import",
     "react"
   ],
   "rules": {
@@ -45,5 +46,18 @@
         "allowSamePrecedence": true
       }
     ]
+  },
+  "settings": {
+    "import/parsers": {
+      "@typescript-eslint/parser": [
+        ".ts",
+        ".tsx"
+      ]
+    },
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true // always try to resolve types under `<root>@types` directory even it doesn't contain any source code, like `@types/unist`
+      }
+    }
   }
 }
