--- a/package.json
+++ b/package.json
@@ -76,11 +76,13 @@
     "@svgr/rollup": "^6.5.1",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/parser": "^5.45.0",
     "css-loader": "^6.7.2",
     "enzyme": "^3.7.0",
     "eslint": "^7.21.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-import-resolver-typescript": "^3.5.2",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-react": "^7.22.0",
     "faker": "^4.1.0",
